<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_add_entry"
        android:textAlignment="center"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:gravity="start"
        android:background="@drawable/edittext"
        android:hint="@string/edit_journal_title"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/text_welcome"
        app:layout_constraintRight_toRightOf="@+id/text_welcome"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/edit_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="10"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:gravity="start"
        android:background="@drawable/edittext"
        android:hint="@string/edit_journal_contents"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edit_title"
        app:layout_constraintRight_toRightOf="@+id/edit_title"
        app:layout_constraintTop_toBottomOf="@+id/edit_title"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/button_save"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:textColor="@color/colorWhite"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/edit_contents"
        app:layout_constraintRight_toRightOf="@+id/edit_contents"
        app:layout_constraintTop_toBottomOf="@+id/edit_contents"/>

</android.support.constraint.ConstraintLayout>