<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.LoginActivity"
    tools:showIn="@layout/activity_login">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/text_udacity_logo"
        app:srcCompat="@drawable/ic_udacity_logo" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/image_logo"
        app:layout_constraintRight_toRightOf="@+id/image_logo"
        app:layout_constraintTop_toTopOf="@+id/image_logo" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_sign_in"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/text"
        app:layout_constraintRight_toRightOf="@+id/text"
        app:layout_constraintTop_toBottomOf="@+id/text" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_copy_right"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/button_sign_in"
        app:layout_constraintRight_toRightOf="@+id/button_sign_in"
        app:layout_constraintTop_toTopOf="@+id/button_sign_in" />

</android.support.constraint.ConstraintLayout>